--- a/index.html
+++ b/index.html
@@ -9,51 +9,52 @@
 </head>
 
 
-<body>
+<main>
     <header class="intro">Kaylee Nguyen
-        <img src="" alt="placeholder">
+        <img src="./assets/pfp.jpg" alt="placeholder">
     </header>
     <nav class="navbar">
             <a class ="box" href="#about"> About Me</a>
             <a class ="box" href="#firstwork"> App 1</a>
-            <a class ="box" href="#otherwork">Other Applications</li>
+            <a class ="box" href="#sec2">Other Applications</li>
             <a class ="box" href="#contact"> Contact Me</a>
         </ul>
     </nav> 
-<div class="aboutme">
+<section class="aboutme">
     <h2 id="about">About Me</h2>
     <p>text about me</p>
-</div>
-<div class="sec1">
+</section>
+<section class="sec1">
     <section id="firstwork">
         <h2>First Application</h2>
-        <a href="link">
-            <img class="ex1" src="" alt="">
+        <a href="https://kn7767.github.io/28-mini-proj/" target="_blank">
+            <img class="ex1" src="./assets/mini-proj-sc.png" alt="SC of mini project">
         </a>
     </section>
-</div>
-<div class="sec2">
+</section>
+<section id="sec2">
     <section class="otherworkcard">
-        <h4>2nd app</h4>
-        <a href="link">
-        <img class="otherex" src="" alt="">
+        <h4>Pre-Work Study Guide</h4>
+        <a href="https://kn7767.github.io/prework-study-guide/" target="_blank">
+        <img class="otherex" src="./assets/prework.png" alt="prework site">
         </a>
     </section>
     <section class="otherworkcard">
         <h4>3rd app</h4>
-        <a href="link">
+        <a href="link" target="_blank">
             <img class="otherex" src="" alt="">
         </a>
     </section>
     <section class="otherworkcard">
         <h4>4th app</h4>
-        <a href="link">
+        <a href="link" target="_blank">
             <img class="otherex" src="" alt="">
         </a>
     </section>
-</div>
+</section>
+</main>
 
-<div> 
+<section> 
     <footer id="contact"> 
         <h3>Contact Me</h3>
         <ul> 
@@ -61,5 +62,5 @@
             <li id="phone"> 555-555-5555</li>
         </ul>
     </footer>
-</div>
+</section>
 </body>
