--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </a>
     </section>
     <section class="otherworkcard">
-        <h4>3rd app</h4>
-        <a href="link" target="_blank">
-            <img class="otherex" src="" alt="">
+        <h4>Discover New Music</h4>
+        <a href="https://abbylopezm.github.io/Project1/" target="_blank">
+            <img class="otherex" src="" alt="Discover New Music">
         </a>
     </section>
     <section class="otherworkcard">
