--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <section class="otherworkcard">
         <h4>4th app</h4>
-        <a href="link" target="_blank">
+        <a href="https://gagglept.herokuapp.com/" target="_blank">
             <img class="otherex" src="" alt="">
         </a>
     </section>
