--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </a>
     </section>
     <section class="otherworkcard">
-        <h4>4th app</h4>
+        <h4>GagglePT</h4>
         <a href="https://gagglept.herokuapp.com/" target="_blank">
             <img class="otherex" src="" alt="">
         </a>
